# example-data-collection-colmi-r02

./: .gitignore  .python-version  ring.py
c++qt/: .gitignore  AboutPage.qml  AccelerometerDisplay.qml  CMakeLists.txt  Main.qml
c++qt/src/: main.cpp  ringconnector.cpp  ringconnector.h  systemtray.cpp  systemtray.h
python/: ring.py
